--- a/src/app/product-modal/product-modal.component.html
+++ b/src/app/product-modal/product-modal.component.html
@@ -8,18 +8,17 @@
         </div>
         <div class="flex gap-3 flex-wrap mt-4" *ngIf="product.additionalImages && product.additionalImages.length > 0">
           <img [src]="product.imageUrl" [alt]="product.name + ' Hauptbild'"
-               (mouseenter)="setMainModalImage(product.imageUrl)"
                (click)="setMainModalImage(product.imageUrl)"
                class="w-16 h-16 object-cover rounded-md border-2 cursor-pointer transition-all hover:opacity-80"
                [ngClass]="mainModalImageUrl === product.imageUrl ? 'border-primary scale-105' : 'border-transparent'">
           <img *ngFor="let img of product.additionalImages" [src]="img" [alt]="product.name + ' Detailbild'"
-               (mouseenter)="setMainModalImage(img)"
                (click)="setMainModalImage(img)"
                class="w-16 h-16 object-cover rounded-md border-2 cursor-pointer transition-all hover:opacity-80"
                [ngClass]="mainModalImageUrl === img ? 'border-primary scale-105' : 'border-transparent'">
         </div>
       </div>
       <div class="md:w-1/2">
+        <span class="badge badge-ghost text-xs mb-2">{{ product.id }}</span>
         <h3 class="text-3xl font-bold text-base-content">{{ product.name }}</h3>
         <p class="py-4 text-base-content/80">{{ product.detailedDescription }}</p>
       </div>
